syntax = "proto3";

package hrtf;

message GetHRTFFromNameReq {
    string Name = 1;
}

message HRTFData {
    string ID = 1;
    string Path = 2;
    string Name = 3;
    string DatabaseName = 4;
}

service HRTF {
    rpc GetHRTFFromName (GetHRTFFromNameReq) returns (HRTFData) {
    }
}


